Error en creacion de empresas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16643,9 +16643,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 49, 338, 83, 11
   CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 338, 45, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 201, 290, 292, 78
-  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 503, 313, 49, 10
-  CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 503, 328, 55, 40
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 560, 328, 34, 13
+  CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 503, 320, 49, 10
+  CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 503, 330, 55, 40
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 560, 330, 34, 13
   CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 30, 26, 11
   CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 118, 30, 37, 11
   CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 156, 30, 19, 11
@@ -16671,15 +16671,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "%", 702, "Static", WS_GROUP, 186, 314, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 186, 326, 8, 8
   CONTROL "%", 704, "Static", WS_GROUP, 186, 340, 8, 8
-  CONTROL "Neto", 705, "Static", WS_GROUP, 503, 295, 49, 8
-  CONTROL "Impuestos", 706, "Static", WS_GROUP, 503, 304, 49, 8
-  CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 607, 295, 50, 8
-  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 607, 304, 50, 8
-  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 607, 313, 50, 8
-  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 572, 347, 85, 21
+  CONTROL "Neto", 705, "Static", WS_GROUP, 503, 290, 49, 8
+  CONTROL "Impuestos", 706, "Static", WS_GROUP, 503, 310, 49, 8
+  CONTROL "0", 370, "Static", SS_RIGHT|WS_GROUP, 560, 290, 100, 8
+  CONTROL "0", 380, "Static", SS_RIGHT|WS_GROUP, 560, 310, 100, 8
+  CONTROL "0", 390, "Static", SS_RIGHT|WS_GROUP, 560, 320, 100, 8
+  CONTROL "0", 410, "Static", SS_RIGHT|WS_GROUP, 563, 347, 97, 21
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 43, 290, 152, 77
-  CONTROL "", 420, "Static", WS_GROUP, 503, 347, 49, 22
-  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 605, 331, 52, 8
+  CONTROL "", 420, "Static", WS_GROUP, 503, 346, 49, 22
+  CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 595, 333, 65, 8
   CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 104, 33, 8
   CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 78, 292, 60, 11
   CONTROL "Base 1", 708, "Static", WS_GROUP, 44, 295, 23, 8
@@ -16709,6 +16709,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 454, 69, 28, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas rectificativas de proveedores", -1, "Static", WS_GROUP, 44, 3, 198, 8
+  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 560, 300, 100, 8
+  CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 503, 300, 54, 8
 }
 
 RCTPRV_2 DIALOG DISCARDABLE 29, 33, 670, 375
