--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13087,12 +13087,12 @@ LFACPRV_7 DIALOG DISCARDABLE 135, 103, 397, 231
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 12
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 2, 264, 12
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 2, 65, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 2, 264, 11
   CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 264, 47
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 12
-  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 12
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
+  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 65, 38, 65, 12
   CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 12
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 50, 65, 12
   CONTROL "", 232, "Edit", WS_BORDER, 132, 51, 264, 12
@@ -18055,57 +18055,82 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-SELECTMAIL_0 DIALOG DISCARDABLE 184, 113, 576, 330
+SELECT_MAIL_CONTAINER DIALOG DISCARDABLE 184, 113, 619, 349
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Asistente para envio de correo electrónico"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 10, "TPages", WS_TABSTOP, 1, 2, 571, 293
-  CONTROL "< &Anterior", 20, "Button", WS_TABSTOP, 418, 300, 50, 14
-  CONTROL "Siguien&te >", 30, "Button", WS_TABSTOP, 468, 300, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 523, 300, 50, 14
-  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 2, 300, 50, 14
-  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 57, 300, 50, 14
+  CONTROL "", 10, "TPages", WS_TABSTOP, 1, 2, 616, 325
+  CONTROL "< &Anterior", 20, "Button", WS_TABSTOP, 463, 331, 50, 14
+  CONTROL "Siguien&te >", 30, "Button", WS_TABSTOP, 513, 331, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 568, 331, 50, 14
+  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 1, 331, 50, 14
+  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 56, 331, 50, 14
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-SELECTMAIL_1 DIALOG DISCARDABLE 113, 78, 571, 303
+SELECT_MAIL_REGISTROS DIALOG DISCARDABLE 113, 78, 620, 320
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 81, 26, 405, 12
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 489, 25, 78, 138
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 95, 26, 439, 12
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 535, 25, 78, 138
   CONTROL "S&eleccionar", 130, "Button", WS_TABSTOP, 43, 42, 50, 14
   CONTROL "&Todos", 140, "Button", WS_TABSTOP, 95, 42, 50, 14
   CONTROL "N&inguno", 150, "Button", WS_TABSTOP, 147, 42, 50, 14
-  CONTROL "&Filtrar", 120, "Button", WS_TABSTOP, 489, 42, 78, 14
-  CONTROL "", 160, "TXBrowse", WS_TABSTOP|0x00300000, 44, 57, 523, 211
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 114, 270, 51, 12
-  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 114, 283, 52, 46
-  CONTROL "Pausar envios", -1, "Static", WS_GROUP, 43, 286, 50, 8
+  CONTROL "", 160, "TXBrowse", WS_TABSTOP|0x00300000, 44, 57, 569, 227
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 114, 287, 51, 12
+  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 114, 300, 52, 46
+  CONTROL "Pausar envios", -1, "Static", WS_GROUP, 43, 303, 50, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
   CONTROL "Seleccion de clientes a los que enviar el correo electrónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
   CONTROL "Buscar", -1, "Static", WS_GROUP, 44, 29, 33, 8
-  CONTROL "Enviar paquetes de ", -1, "Static", WS_GROUP, 44, 273, 69, 8
+  CONTROL "Enviar paquetes de ", -1, "Static", WS_GROUP, 44, 290, 69, 8
 }
 
-SELECTMAIL_2 DIALOG DISCARDABLE 113, 78, 575, 295
+SELECT_MAIL_REDACTAR DIALOG DISCARDABLE 113, 78, 620, 320
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 90, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 109, 29, 250, 12
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 109, 41, 250, 12
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 109, 53, 250, 12
-  CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 44, 27, 8
-  CONTROL "Adjuntar archivo(s)", -1, "Static", WS_GROUP, 44, 56, 64, 8
-  CONTROL "De", -1, "Static", WS_GROUP, 44, 29, 15, 8
-  CONTROL "", 130, "TActiveX", 0x00000000, 4, 66, 567, 225
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 395, 52, 164, 191
-  CONTROL "", 170, "TBtnBmp", 0x00000000, 560, 52, 11, 12
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
-  CONTROL "Campos", -1, "Static", WS_GROUP, 361, 55, 31, 8
-  CONTROL "Datos generales del envio de correos electrónicos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 527, 8
+  CONTROL "", 90, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 29, 308, 11
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 41, 308, 11
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 308, 11
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 294, 11
+  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 119, 563, 194
+  CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 68, 27, 8
+  CONTROL "Adjuntar archivo", 4001, "Static", WS_GROUP, 44, 80, 57, 8
+  CONTROL "De", 4002, "Static", WS_GROUP, 44, 31, 15, 8
+  CONTROL "Para", 4003, "Static", WS_GROUP, 44, 43, 20, 8
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
+  CONTROL "Envio de documento por correo electónico", 4004, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
+  CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
+  CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 13
+  CONTROL "Campos", 4005, "Static", WS_GROUP, 417, 80, 31, 8
+  CONTROL "Con copia", 4006, "Static", WS_GROUP, 44, 56, 37, 8
+  CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 104, 12, 12
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 104, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 104, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 93, 104, 12, 12
+  CONTROL "", 604, "TBtnBmp", 0x00000000, 106, 104, 12, 12
+  CONTROL "", 605, "TBtnBmp", 0x00000000, 119, 104, 12, 12
+  CONTROL "", 606, "TBtnBmp", 0x00000000, 135, 104, 12, 12
+  CONTROL "", 607, "TBtnBmp", 0x00000000, 148, 104, 12, 12
+  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 162, 104, 41, 68
+  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL, 205, 104, 95, 68
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 302, 104, 33, 68
+  CONTROL "", 611, "TBtnBmp", 0x00000000, 337, 104, 12, 12
+  CONTROL "", 612, "TBtnBmp", 0x00000000, 350, 104, 12, 12
+  CONTROL "", 613, "TBtnBmp", 0x00000000, 363, 104, 12, 12
+  CONTROL "", 614, "TBtnBmp", 0x00000000, 379, 104, 12, 12
+  CONTROL "", 615, "TBtnBmp", 0x00000000, 392, 104, 12, 12
+  CONTROL "", 616, "TBtnBmp", 0x00000000, 405, 104, 12, 12
+  CONTROL "", 617, "TBtnBmp", 0x00000000, 418, 104, 12, 12
+  CONTROL "", 618, "TBtnBmp", 0x00000000, 434, 104, 12, 12
+  CONTROL "", 619, "TBtnBmp", 0x00000000, 447, 104, 12, 12
+  CONTROL "Texto", -1, "Button", BS_GROUPBOX, 44, 94, 569, 223
 }
 
 SELECTPROPIEDAD DIALOG DISCARDABLE 141, -5, 305, 286
@@ -18214,7 +18239,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
   CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 11
   CONTROL "Campos", -1, "Static", WS_GROUP, 417, 80, 31, 8
-  CONTROL "Con copia", -1, "Static", WS_GROUP, 44, 55, 37, 8
+  CONTROL "Con copia", -1, "Static", WS_GROUP, 44, 56, 37, 8
   CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 104, 12, 12
   CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 104, 12, 12
   CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 104, 12, 12
