--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18075,18 +18075,14 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 95, 26, 439, 12
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 535, 25, 78, 138
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 536, 26, 78, 138
   CONTROL "S&eleccionar", 130, "Button", WS_TABSTOP, 43, 42, 50, 14
   CONTROL "&Todos", 140, "Button", WS_TABSTOP, 95, 42, 50, 14
   CONTROL "N&inguno", 150, "Button", WS_TABSTOP, 147, 42, 50, 14
-  CONTROL "", 160, "TXBrowse", WS_TABSTOP|0x00300000, 44, 57, 569, 227
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 114, 287, 51, 12
-  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 114, 300, 52, 46
-  CONTROL "Pausar envios", -1, "Static", WS_GROUP, 43, 303, 50, 8
+  CONTROL "", 160, "TXBrowse", WS_TABSTOP|0x00300000, 44, 57, 570, 259
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
-  CONTROL "Seleccion de clientes a los que enviar el correo electrónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+  CONTROL "Selección de registros a los que enviar el correo electrónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
   CONTROL "Buscar", -1, "Static", WS_GROUP, 44, 29, 33, 8
-  CONTROL "Enviar paquetes de ", -1, "Static", WS_GROUP, 44, 290, 69, 8
 }
 
 SELECT_MAIL_REDACTAR DIALOG DISCARDABLE 113, 78, 620, 320
@@ -18106,7 +18102,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
   CONTROL "Envio de documento por correo electónico", 4004, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
   CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
   CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 13
   CONTROL "Campos", -1, "Static", WS_GROUP, 417, 80, 31, 8
   CONTROL "Con copia", 151, "Static", WS_GROUP, 44, 56, 37, 8
@@ -20110,5 +20106,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 111, 296, 105
   CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 111, 53, 8
   CONTROL "Descipción larga", -1, "Static", WS_GROUP, 4, 3, 53, 8
+}
+
+SELECT_MAIL_PROCESO DIALOG DISCARDABLE 113, 78, 620, 320
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 115, 29, 51, 11
+  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 115, 42, 52, 81
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 44, 58, 570, 251
+  CONTROL "", 120, "msctls_progress32", 0x00000000, 44, 311, 570, 6
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
+  CONTROL "Proceso de envio de correos electrónicos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+  CONTROL "Pausar envios", 4001, "Static", WS_GROUP, 44, 45, 50, 8
+  CONTROL "Enviar paquetes de ", -1, "Static", WS_GROUP, 44, 32, 69, 8
 }
 
