--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20112,13 +20112,13 @@ SELECT_MAIL_PROCESO DIALOG DISCARDABLE 113, 78, 620, 320
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 115, 29, 51, 11
-  CONTROL "", 170, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 115, 42, 52, 81
+  CONTROL "", 180, "Edit", NOT WS_VISIBLE|ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 115, 29, 51, 11
+  CONTROL "", 170, "ComboBox", NOT WS_VISIBLE|WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 115, 42, 52, 81
   CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 44, 58, 570, 251
   CONTROL "", 120, "msctls_progress32", 0x00000000, 44, 311, 570, 6
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
   CONTROL "Proceso de envio de correos electrónicos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Pausar envios", 4001, "Static", WS_GROUP, 44, 45, 50, 8
-  CONTROL "Enviar paquetes de ", -1, "Static", WS_GROUP, 44, 32, 69, 8
+  CONTROL "Pausar envios", 171, "Static", NOT WS_VISIBLE|WS_GROUP, 44, 45, 50, 8
+  CONTROL "Enviar paquetes de ", 181, "Static", NOT WS_VISIBLE|WS_GROUP, 44, 32, 69, 8
 }
 
