--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5507,29 +5507,30 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 402, 2, 59, 48
 }
 
-EMPRESA_0 DIALOG DISCARDABLE 92, 14, 432, 361
+EMPRESA_COMUNICACIONES DIALOG DISCARDABLE 92, 14, 432, 361
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 41, 207, 12
   CONTROL "", 165, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 41, 44, 12
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 54, 297, 12
+  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 54, 207, 12
   CONTROL "", 176, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 67, 96, 12
-  CONTROL "Mi servidor de salida (SMTP) requiere autenticación", 175, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 68, 175, 10
+  CONTROL "Autenticación SMTP", 175, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 56, 79, 10
+  CONTROL "Requiere SSL", 177, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 68, 79, 10
   CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 128, 80, 297, 12
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 110, 207, 12
   CONTROL "", 110, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 110, 44, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 124, 297, 12
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 138, 297, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 151, 297, 12
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 123, 297, 12
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 136, 297, 12
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 150, 297, 12
   CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 163, 297, 12
-  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 177, 115, 12
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 192, 52, 15
+  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 176, 115, 12
+  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 191, 52, 15
   CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 208, 129, 10
   CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 125, 10
   CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 208, 129, 10
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 177, 43, 12
-  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 191, 12, 13
+  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 176, 43, 12
+  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 13
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
   CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 245, 44, 12
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 259, 207, 12
@@ -5540,18 +5541,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 328, 96, 12
   CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 44, 97, 385, 136
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 113, 31, 8
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 126, 29, 8
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 140, 41, 8
-  CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 153, 51, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 113, 26, 8
-  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 335, 195, 57, 8
+  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 125, 29, 8
+  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 138, 41, 8
+  CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 152, 51, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 113, 26, 8
+  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 335, 194, 57, 8
   CONTROL "Servidor de correo electrónico", -1, "Button", BS_GROUPBOX, 44, 29, 385, 67
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 44, 31, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 48, 57, 28, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 43, 26, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 43, 26, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 70, 41, 8
-  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 335, 180, 45, 8
-  CONTROL "Latencia pedidos", -1, "Static", WS_GROUP, 48, 195, 65, 8
+  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 335, 179, 45, 8
+  CONTROL "Latencia pedidos", -1, "Static", WS_GROUP, 48, 194, 65, 8
   CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 303, 384, 40
   CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 318, 74, 8
   CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 331, 62, 8
@@ -5565,7 +5566,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Configuraciones para el envio de email y para el enlace de la aplicación con una página web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
   CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 166, 51, 8
   CONTROL "Enviar con copia a", -1, "Static", WS_GROUP, 49, 83, 65, 8
-  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 180, 72, 8
+  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 179, 72, 8
 }
 
 EMPRESA_1 DIALOG DISCARDABLE 31, 12, 397, 287
