--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18065,8 +18065,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "< &Anterior", 20, "Button", WS_TABSTOP, 463, 331, 50, 14
   CONTROL "Siguien&te >", 30, "Button", WS_TABSTOP, 513, 331, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 568, 331, 50, 14
-  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 1, 331, 50, 14
-  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 56, 331, 50, 14
+  CONTROL "Cargar HTML", 40, "Button", WS_TABSTOP, 1, 331, 70, 14
+  CONTROL "Guardar HTML", 50, "Button", WS_TABSTOP, 75, 331, 70, 14
+  CONTROL "Guardar como HTML", 60, "Button", WS_TABSTOP, 149, 331, 70, 14
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -18075,11 +18076,12 @@ SELECT_MAIL_REGISTROS DIALOG DISCARDABLE 113, 78, 620, 320
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 95, 26, 439, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 95, 26, 439, 13
   CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 536, 26, 78, 138
   CONTROL "S&eleccionar", 130, "Button", WS_TABSTOP, 43, 42, 50, 14
   CONTROL "&Todos", 140, "Button", WS_TABSTOP, 95, 42, 50, 14
   CONTROL "N&inguno", 150, "Button", WS_TABSTOP, 147, 42, 50, 14
+  CONTROL "&Filtrar", 170, "Button", WS_TABSTOP, 536, 41, 78, 14
   CONTROL "", 160, "TXBrowse", WS_TABSTOP|0x00300000, 44, 57, 570, 259
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
   CONTROL "Selección de registros a los que enviar el correo electrónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
@@ -18101,7 +18103,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "De", -1, "Static", WS_GROUP, 44, 31, 15, 8
   CONTROL "Para", 121, "Static", WS_GROUP, 44, 43, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
-  CONTROL "Envio de documento por correo electónico", 4004, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
+  CONTROL "Envio de documento por correo electónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
   CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
   CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
   CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 13
