--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6730,82 +6730,84 @@ FACCLI_2 DIALOG DISCARDABLE 26, -29, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 103, 37, 73, 11
+  CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 103, 37, 72, 11
   CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 178, 37, 177, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 103, 50, 73, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 103, 50, 72, 11
   CONTROL "", 301, "Edit", WS_BORDER, 178, 50, 177, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 103, 63, 73, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 103, 63, 72, 11
   CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 178, 63, 177, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 103, 75, 73, 11
-  CONTROL "", 180, "Edit", WS_BORDER, 178, 75, 177, 11
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 87, 252, 11
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 99, 74, 11
-  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 179, 100, 41, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 99, 73, 11
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 99, 50, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 103, 76, 72, 11
+  CONTROL "", 180, "Edit", WS_BORDER, 178, 76, 177, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 89, 252, 11
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 99, 84, 11
+  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 50, 103, 41, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 102, 72, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 178, 102, 50, 11
+  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 50, 116, 46, 10
+  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 115, 72, 11
+  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 178, 115, 50, 11
+  CONTROL "Enviar mail", 135, "Button", BS_AUTOCHECKBOX, 50, 129, 47, 10
+  CONTROL "", 136, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 128, 125, 11
   CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 417, 37, 70, 11
   CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 489, 37, 168, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 417, 50, 240, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 63, 85, 11
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 75, 85, 11
-  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 141, 60, 10
-  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 87, 85, 11
-  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 153, 60, 10
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 63, 84, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 75, 84, 11
+  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 156, 60, 10
+  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 87, 84, 11
+  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 168, 60, 10
   CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 63, 110, 11
-  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 165, 60, 10
+  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 180, 60, 10
   CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 75, 110, 11
-  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 177, 60, 10
+  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 192, 60, 10
   CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 88, 110, 11
-  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 140, 428, 29
-  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 171, 428, 29
-  CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 48, 218, 50, 14
-  CONTROL "&Eliminar", 502, "Button", WS_TABSTOP, 48, 233, 50, 14
-  CONTROL "&Previsualizar", 506, "Button", WS_TABSTOP, 48, 248, 50, 14
-  CONTROL "&Imprimir", 505, "Button", WS_TABSTOP, 48, 263, 50, 14
-  CONTROL "", 260, "TXBrowse", WS_TABSTOP|0x00300000, 102, 218, 400, 66
-  CONTROL "A&gregar", 270, "Button", WS_TABSTOP, 48, 302, 50, 14
-  CONTROL "Ag. de c&liente", 400, "Button", WS_TABSTOP, 48, 317, 50, 14
-  CONTROL "", 290, "TXBrowse", WS_TABSTOP|0x00300000, 102, 302, 400, 66
-  CONTROL "0", 460, "Static", SS_RIGHT|WS_GROUP, 575, 233, 80, 10
-  CONTROL "0", 480, "Static", SS_RIGHT|WS_GROUP, 585, 342, 70, 10
-  CONTROL "Cobros", 112, "Button", BS_GROUPBOX, 44, 207, 465, 81
+  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 157, 428, 29
+  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 188, 428, 29
+  CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 48, 234, 50, 14
+  CONTROL "&Eliminar", 502, "Button", WS_TABSTOP, 48, 249, 50, 14
+  CONTROL "&Previsualizar", 506, "Button", WS_TABSTOP, 48, 264, 50, 14
+  CONTROL "&Imprimir", 505, "Button", WS_TABSTOP, 48, 279, 50, 14
+  CONTROL "", 260, "TXBrowse", WS_TABSTOP|0x00300000, 102, 234, 400, 66
+  CONTROL "A&gregar", 270, "Button", WS_TABSTOP, 48, 317, 50, 14
+  CONTROL "Ag. de c&liente", 400, "Button", WS_TABSTOP, 48, 332, 50, 14
+  CONTROL "", 290, "TXBrowse", WS_TABSTOP|0x00300000, 102, 317, 400, 50
+  CONTROL "0", 460, "Static", SS_RIGHT|WS_GROUP, 575, 249, 80, 10
+  CONTROL "0", 480, "Static", SS_RIGHT|WS_GROUP, 585, 317, 70, 10
+  CONTROL "Cobros", 112, "Button", BS_GROUPBOX, 44, 223, 465, 81
   CONTROL "Entrega", -1, "Static", WS_GROUP, 370, 90, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 129, 489, 76
-  CONTROL "Comentarios", -1, "Static", WS_GROUP, 178, 172, 44, 8
-  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 141, 52, 8
-  CONTROL "Condiciones", -1, "Static", WS_GROUP, 50, 90, 46, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 144, 489, 76
+  CONTROL "Comentarios", -1, "Static", WS_GROUP, 178, 189, 44, 8
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 158, 52, 8
+  CONTROL "Condiciones", -1, "Static", WS_GROUP, 50, 92, 46, 8
   CONTROL "Retirado por", -1, "Static", WS_GROUP, 370, 53, 46, 8
   CONTROL "Matrícula", -1, "Static", WS_GROUP, 370, 66, 46, 8
-  CONTROL "Pendiente", -1, "Static", WS_GROUP, 518, 342, 44, 10
-  CONTROL "Cobrado", -1, "Static", WS_GROUP, 518, 233, 44, 10
-  CONTROL "Total factura", -1, "Static", WS_GROUP, 518, 218, 44, 10
-  CONTROL "0", 455, "Static", SS_RIGHT|WS_GROUP, 575, 218, 80, 10
-  CONTROL "Proyecto", -1, "Static", WS_GROUP, 50, 78, 44, 8
-  CONTROL "Su pedido", -1, "Static", WS_GROUP, 50, 102, 44, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 316, 97
+  CONTROL "Pendiente", -1, "Static", WS_GROUP, 518, 317, 44, 10
+  CONTROL "Cobrado", -1, "Static", WS_GROUP, 518, 249, 44, 10
+  CONTROL "Total factura", -1, "Static", WS_GROUP, 518, 234, 44, 10
+  CONTROL "0", 455, "Static", SS_RIGHT|WS_GROUP, 575, 234, 80, 10
+  CONTROL "Proyecto", -1, "Static", WS_GROUP, 50, 79, 44, 8
+  CONTROL "Su pedido", -1, "Static", WS_GROUP, 370, 102, 37, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 316, 112
   CONTROL "Transport.", -1, "Static", WS_GROUP, 370, 40, 46, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 50, 66, 44, 8
   CONTROL "Bultos", -1, "Static", WS_GROUP, 370, 78, 46, 8
-  CONTROL "Anticipos", -1, "Button", BS_GROUPBOX, 44, 290, 465, 81
-  CONTROL "Anticipos", -1, "Static", WS_GROUP, 518, 248, 44, 10
-  CONTROL "0", 470, "Static", SS_RIGHT|WS_GROUP, 575, 248, 80, 10
-  CONTROL "", -1, "Button", BS_GROUPBOX, 513, 207, 150, 126
-  CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 48, 332, 50, 14
+  CONTROL "Anticipos", -1, "Button", BS_GROUPBOX, 44, 306, 465, 65
+  CONTROL "Anticipos", -1, "Static", WS_GROUP, 518, 264, 44, 10
+  CONTROL "0", 470, "Static", SS_RIGHT|WS_GROUP, 575, 264, 80, 10
+  CONTROL "", -1, "Button", BS_GROUPBOX, 513, 223, 150, 81
+  CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 48, 347, 50, 14
   CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 53, 44, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 365, 30, 298, 97
-  CONTROL "TARA", -1, "Static", WS_GROUP, 506, 66, 41, 8
-  CONTROL "Peso ", -1, "Static", WS_GROUP, 506, 78, 41, 8
-  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 506, 91, 41, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 513, 335, 150, 36
-  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 50, 112, 46, 10
-  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 111, 74, 11
-  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 179, 111, 41, 11
-  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 99, 85, 11
-  CONTROL "Su albarán", -1, "Static", WS_GROUP, 370, 102, 46, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 365, 30, 298, 112
+  CONTROL "TARA", -1, "Static", WS_GROUP, 505, 66, 25, 8
+  CONTROL "Peso ", -1, "Static", WS_GROUP, 505, 78, 23, 8
+  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 505, 91, 39, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 513, 305, 150, 66
+  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 112, 84, 11
+  CONTROL "Su albarán", -1, "Static", WS_GROUP, 370, 115, 46, 8
   CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 40, 44, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 129, 127, 76
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 144, 127, 76
 }
 
 FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 378
